applications/konflux-lab/deploy/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-api
  labels:
    app.kubernetes.io/name: hello-api
    app.kubernetes.io/part-of: konflux-lab
spec:
  to:
    kind: Service
    name: hello-api
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
